# postcard-rpc

example/firmware/: Cargo.toml
example/workbook-host/: Cargo.toml
example/workbook-icd/: Cargo.toml
source/postcard-rpc/: Cargo.toml
source/postcard-rpc-test/: Cargo.toml
source/postcard-rpc/src/host_client/: raw_nusb.rs
source/postcard-rpc/src/server/impls/: embassy_usb_v0_3.rs
