[package]
name = "workbook-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m                = { version = "0.7.7", features = ["inline-asm"] }
embassy-executor        = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp              = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync            = { version = "0.6.0", features = ["defmt"] }
embassy-time            = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb             = { version = "0.3.0", features = ["defmt"] }
embedded-hal-bus        = { version = "0.1",   features = ["async"] }
lis3dh-async            = { version = "0.9.2", features = ["defmt"] }
panic-probe             = { version = "0.3",   features = ["print-defmt"] }
postcard-rpc            = { version = "0.6",   features = ["embassy-usb-0_2-server"] }
postcard                = { version = "1.0.9", features = ["experimental-derive"] }
portable-atomic         = { version = "1.6.0", features = ["critical-section"] }

workbook-icd            = { path = "../workbook-icd" }

cortex-m-rt         = "0.7.0"
defmt               = "0.3"
defmt-rtt           = "0.4"
embedded-hal-async  = "1.0"
fixed               = "1.23.1"
fixed-macro         = "1.2"
pio                 = "0.2.1"
pio-proc            = "0.2"
smart-leds          = "0.3.0"
static_cell         = "2.1"

[profile.release]
debug = 2
lto = true
opt-level = 's'
codegen-units = 1
incremental = false

[patch.crates-io]
# NOTE: Although embassy-usb has released 0.2, we still need to use patched deps for the other various crates
# for now. See https://github.com/embassy-rs/embassy/issues/2936 for getting other min versions of these
# crates published.

embassy-embedded-hal = { git = "ssh://git@github.com/jucr-io/embassy/" , branch = "kk/update-forks-main" }
embassy-executor     = { git = "ssh://git@github.com/jucr-io/embassy/" , branch = "kk/update-forks-main" }
embassy-rp           = { git = "ssh://git@github.com/jucr-io/embassy/" , branch = "kk/update-forks-main" }
embassy-sync         = { git = "ssh://git@github.com/jucr-io/embassy/" , branch = "kk/update-forks-main" }
embassy-time         = { git = "ssh://git@github.com/jucr-io/embassy/" , branch = "kk/update-forks-main" }
embassy-usb          = { git = "ssh://git@github.com/jucr-io/embassy/" , branch = "kk/update-forks-main" }
embassy-usb-driver   = { git = "ssh://git@github.com/jucr-io/embassy/" , branch = "kk/update-forks-main" }
postcard-rpc         = { path = "../../source/postcard-rpc" }
postcard             = { path = "../../../postcard/source/postcard" }
