[package]
name = "workbook-icd"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.postcard]
features = ["experimental-derive"]
git = "ssh://git@github.com/jucr-io/postcard"

[dependencies.postcard-rpc]
version = "0.6"

[patch.crates-io]
postcard-rpc = { path = "../../source/postcard-rpc" }
