[package]
name = "workbook-icd"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.postcard-rpc]
version = "0.10"

[dependencies.postcard-schema]
features = ["derive"]
git = "ssh://git@github.com/jucr-io/postcard"
branch = "jucr_main"

[patch.crates-io]
postcard-rpc = { path = "../../source/postcard-rpc" }

[features]
use-std = []
